# Machine-Learning-Project

./: .gitignore  EigengapsHeuristicCode_Update.txt  Project_2_Correct_Eval_Function.py  Project_2_Optimization_Function.py  SilhouetteScoreCode.txt  SpectralClusteringCode_WorkingCode_Update.txt  best_model.pt  environment.yml  hello.py  pyproject.toml  requirements.txt
Project 1/: Average Income and Gender.ipynb  EDA.ipynb  EigengapsHeuristicCode.py  ElbowMethod.ipynb  FuzzyKMeans.ipynb  FuzzyKMeans.py  GMM_Cluster.ipynb  Kmeans.ipynb  SilhouetteScoreCode.py  Spectral.ipynb  SpectralClusteringCode.py  average_income_and_gender.py  requirements.txt
Project 1/Notebooks/: EDA.ipynb  FuzzyKMeans.ipynb  GMM_Cluster.ipynb  KMeans.ipynb  Spectral.ipynb
Project 1/Scripts/: Eigengap_Heuristic.py  EigengapsHeuristicCode.py  FuzzyKMeans.py  SilhouetteScoreCode.py  SpectralClusteringCode.py  k_means.py
Project 2/: ann.py  best_model.pt  init.py  neural_network_example.py  run_ann.sh  train.sh
Project 3/: best_model.pt  cnn.py
